--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <meta name="author" content="Mario Barrios">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Indie Developer Log</title>
+    <title>Welcome</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+    <article>
+        <section>
+        </section>
+    </article>
+    <article>
 
+    </article>
+    <article>
+
+    </article>
 </body>
+
 <footer>
 
 </footer>
