--- a/index.html
+++ b/index.html
@@ -13,12 +13,47 @@
 </head>
 
 <body>
-    <article class="dark-bg container ">
-        <section class="main-centered">
-            <h1>Juan Martínez</h1>
+    <article class="dark-bg container-fluid ">
+
+        <section class="d-flex main-centered">
+            <span class="square"></span>
+            <h1 class="number">
+                01
+            </h1>
+            <div class="introduction container-fluid">
+                <p>Hello, I'm</p>
+                <h1>Juan Martínez</h1>
+                <p>Hello! I am a software developer! I can help you build a product, feature or website. Look through
+                    some of my work and experience! If you like what you see and have a project you need coded, don’t
+                    hesitate and contact me.</p>
+                <div class="d-flex  align-items-center">
+                    <p class="block orange m-0">See my work</p>
+                    <span class="vector1"></span>
+                    <div class="d-flex social-media">
+                        <!-- stackoverflow -->
+                        <a href=""><img src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
+                        <!-- github -->
+                        <a href=""><img class="github-icon" src="icons/github.svg" alt="Github icon"></a>
+                        <!-- twitter -->
+                        <a href=""><img src="icons/twitter.svg" alt="Twitter icon"></a>
+                        <!-- linkedin -->
+                        <a href=""><img src="icons/linkedin.svg" alt="Linkedin-icon"></a>
+                        <!-- medium -->
+                        <a href=""><img src="icons/medium.svg" alt="Medium icon"></a>
+                    </div>
+                </div>
+            </div>
+
+
         </section>
     </article>
     <article>
+        <div class="dark-bg">
+            <h1 class="number">02</h1>
+            <p>My recent works</p>
+            <h1>Portfolio</h1>
+        </div>
+
 
     </article>
     <article>
