--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Mario Barrios">
@@ -12,7 +13,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
+
 <body>
+    <span class="vert-stripes block"></span>
+    <span class="vert-stripes block"></span>
+    <span class="vert-stripes block"></span>
+    <span class="vert-stripes block"></span>
+    <span class="vert-stripes block"></span>
+    <span class="vert-stripes block"></span>
+    <span class="vert-stripes block"></span>
     <article class="dark-bg container-fluid ">
 
         <section class="d-flex main-centered">
