added project images and sizing

--- a/index.html
+++ b/index.html
@@ -56,17 +56,44 @@
 
         </section>
     </article>
-    <article>
-        <div class="dark-bg">
-            <h1 class="number">02</h1>
-            <p>My recent works</p>
-            <h1>Portfolio</h1>
-        </div>
-
+    <article class="dark-bg container-fluid">
+        <section>
+            <div class="d-flex left-centered">
+                <h1 class="number">02</h1>
+                <div class="introduction">
+                    <p>My recent works</p>
+                    <h1>Portfolio</h1>
+                </div>
+            </div>
+            <div class="white-bg d-flex container-fluid p-0">
+                <div class="d-flex capstone p-1">
+                    <a class="capstone-desk" href=""></a>
+                    <a class="capstone-mobile" href=""></a>
+                </div>
+                <div class="d-flex social p-1">
+                    <a class="social" href=""></a>
+                </div>
+                <div class="d-flex TNW p-1">
+                    <a class="TNW" href=""></a>
+                </div>
+                <div class="d-flex tic-tac-toe p-1">
+                    <a class="tic-tac-toe" href=""></a>
+                </div>
+                <div class="d-flex newsweek p-1">
+                    <a class="newsweek" href=""></a>
+                </div>
+            </div>
+        </section>
 
     </article>
-    <article>
-
+    <article class="dark-bg container-fluid">
+        <section>
+            <div>
+                <p class="number">03</p>
+                <h1>About me</h1>
+            </div>
+            <div></div>
+        </section>
     </article>
 </body>
 
