added vectors for about section and layout

--- a/index.html
+++ b/index.html
@@ -67,19 +67,24 @@
             </div>
             <div class="white-bg d-flex container-fluid p-0">
                 <div class="d-flex capstone p-1">
+                    <h2 class="project">Indie Developer Log</h2>
                     <a class="capstone-desk" href=""></a>
                     <a class="capstone-mobile" href=""></a>
                 </div>
                 <div class="d-flex social p-1">
+                    <h2 class="project">Social media app</h2>
                     <a class="social" href=""></a>
                 </div>
                 <div class="d-flex TNW p-1">
+                    <h2 class="project">TNW Mimic</h2>
                     <a class="TNW" href=""></a>
                 </div>
                 <div class="d-flex tic-tac-toe p-1">
+                    <h2 class="project">Tic-tac-toe</h2>
                     <a class="tic-tac-toe" href=""></a>
                 </div>
                 <div class="d-flex newsweek p-1">
+                    <h2 class="project">Newsweek mimic</h2>
                     <a class="newsweek" href=""></a>
                 </div>
             </div>
@@ -88,11 +93,21 @@
     </article>
     <article class="dark-bg container-fluid">
         <section>
-            <div>
-                <p class="number">03</p>
-                <h1>About me</h1>
+            <div class="d-flex right-centered">
+                <h1 class="number">03</h1>
+                <div class="introduction">
+                    <p>Learn more</p>
+                    <h1>About me</h1>
+                </div>
             </div>
-            <div></div>
+            <div class="squares">
+                <div class="square">
+                    <div class="vector"></div>
+                    <div class="vector"></div>
+                    <div class="vector"></div>
+                    <div class="vector"></div>
+                </div>
+            </div>
         </section>
     </article>
 </body>
