added about me sections, lacking description adn resume link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <article class="dark-bg container-fluid ">
 
         <section class="d-flex main-centered">
-            <span class="square"></span>
+            <span class="square-decoration"></span>
             <h1 class="number">
                 01
             </h1>
@@ -92,20 +92,60 @@
 
     </article>
     <article class="dark-bg container-fluid">
-        <section>
-            <div class="d-flex right-centered">
+        <section class="d-flex about-me">
+            <div class="d-flex right-centered order-2">
                 <h1 class="number">03</h1>
                 <div class="introduction">
                     <p>Learn more</p>
                     <h1>About me</h1>
                 </div>
             </div>
-            <div class="squares">
+            <div class="squares d-flex flex-wrap order-1">
                 <div class="square">
                     <div class="vector"></div>
+                    <div class="about-info">
+                        <h4>Languages</h4>
+                        <ul>
+                            <li>JavaScript (ES5/ES6)</li>
+                            <li>Ruby</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="square">
                     <div class="vector"></div>
+                    <div class="about-info">
+                        <h4>Frameworks</h4>
+                        <ul>
+                            <li>Ruby on rails</li>
+                            <li>Rspec</li>
+                            <li>Capibara</li>
+                            <li>Bootstrap</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="square">
                     <div class="vector"></div>
+                    <div class="about-info">
+                        <h4>Skills</h4>
+                        <ul>
+                            <li>GitHub</li>
+                            <li>Terminal</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="square">
                     <div class="vector"></div>
+                    <div class="about-info">
+                        <h4>Soft-skills</h4>
+                        <ul>
+                            <li>Communication</li>
+                            <li>Problem-solving</li>
+                            <li>Patience</li>
+                            <li>Adaptability</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
