finished layout of about me section

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 
 <body>
-    <span class="vert-stripes block"></span>
-    <span class="vert-stripes block"></span>
-    <span class="vert-stripes block"></span>
-    <span class="vert-stripes block"></span>
-    <span class="vert-stripes block"></span>
-    <span class="vert-stripes block"></span>
-    <span class="vert-stripes block"></span>
+    <div class="vert-stripes block"></div>
+    <div class="vert-stripes block"></div>
+    <div class="vert-stripes block"></div>
+    <div class="vert-stripes block"></div>
+    <div class="vert-stripes block"></div>
+    <div class="vert-stripes block"></div>
+    <div class="vert-stripes block"></div>
     <article class="dark-bg container-fluid ">
 
         <section class="d-flex main-centered">
-            <span class="square-decoration"></span>
+            <div class="square-decoration"></div>
             <h1 class="number">
                 01
             </h1>
@@ -37,7 +37,7 @@
                     hesitate and contact me.</p>
                 <div class="d-flex  align-items-center">
                     <p class="block orange m-0">See my work</p>
-                    <span class="vector1"></span>
+                    <div class="vector1"></div>
                     <div class="d-flex social-media">
                         <!-- stackoverflow -->
                         <a href=""><img src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
@@ -98,6 +98,17 @@
                 <div class="introduction">
                     <p>Learn more</p>
                     <h1>About me</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <div class="d-flex">
+                        <a class="block orange m-0 link-icon d-flex" href=""> Get my Resume
+                            <img class="link-icon" src="icons/link.svg" alt="">
+                        </a>
+                    </div>
+
                 </div>
             </div>
             <div class="squares d-flex flex-wrap order-1">
