--- a/index.html
+++ b/index.html
@@ -66,26 +66,51 @@
                 </div>
             </div>
             <div class="white-bg d-flex container-fluid p-0">
-                <div class="d-flex capstone p-1">
-                    <h2 class="project">Indie Developer Log</h2>
-                    <a class="capstone-desk" href=""></a>
-                    <a class="capstone-mobile" href=""></a>
+                <div id="capstone" class="d-flex capstone p-1 detail">
+                    <div id="capstone-back" class="hide-detail detail">
+                        <h2 class="project ">Indie Developer Log</h2>
+                        <div class="d-flex back-tech">
+                            <p>Ruby on Rails</p>
+                            <p>JavaScript</p>
+                            <p>PostgreSQL</p>
+                            <p>HTML/CSS</p>
+                        </div>
+                        <p class="project-description"></p>
+                    </div>
+                    <div id="capstone" class="capstone-desk test detail"></div>
+                    <div id="capstone" class="capstone-mobile detail"></div>
                 </div>
                 <div class="d-flex social p-1">
                     <h2 class="project">Social media app</h2>
-                    <a class="social" href=""></a>
+                    <div id="social" class="project  detail">
+                        <div id="social-back" class="hide-detail detail">
+
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex TNW p-1">
                     <h2 class="project">TNW Mimic</h2>
-                    <a class="TNW" href=""></a>
+                    <div id="TNW" class="project  detail">
+                        <div id="TNW-back" class="hide-detail detail">
+
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex tic-tac-toe p-1">
                     <h2 class="project">Tic-tac-toe</h2>
-                    <a class="tic-tac-toe" href=""></a>
+                    <div id="tic-tac-toe" class="project  detail">
+                        <div id="tic-tac-toe-back" class="hide-detail detail">
+
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex newsweek p-1">
                     <h2 class="project">Newsweek mimic</h2>
-                    <a class="newsweek" href=""></a>
+                    <div id="newsweek" class="project  detail">
+                        <div id="newsweek-back" class="hide-detail detail">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -161,10 +186,10 @@
             </div>
         </section>
     </article>
+    <footer>
+
+    </footer>
+    <script src="detail.js"></script>
 </body>
-
-<footer>
-
-</footer>
 
 </html>
