--- a/index.html
+++ b/index.html
@@ -67,13 +67,21 @@
             </div>
             <div class="white-bg d-flex container-fluid p-0">
                 <div id="capstone" class="d-flex capstone p-1 detail">
-                    <div id="capstone-back" class="hide-detail detail">
+                    <div id="capstone-back" class="hide-detail">
                         <h2 class="project ">Indie Developer Log</h2>
-                        <div class="d-flex back-tech">
-                            <p>Ruby on Rails</p>
-                            <p>JavaScript</p>
-                            <p>PostgreSQL</p>
-                            <p>HTML/CSS</p>
+                        <div class="d-flex back-tech flex-wrap">
+                            <div>
+                                <p>Ruby on Rails</p>
+                            </div>
+                            <div>
+                                <p>JavaScript</p>
+                            </div>
+                            <div>
+                                <p>PostgreSQL</p>
+                            </div>
+                            <div>
+                                <p>HTML/CSS</p>
+                            </div>
                         </div>
                         <p class="project-description"></p>
                     </div>
@@ -81,34 +89,90 @@
                     <div id="capstone" class="capstone-mobile detail"></div>
                 </div>
                 <div class="d-flex social p-1">
-                    <h2 class="project">Social media app</h2>
                     <div id="social" class="project  detail">
                         <div id="social-back" class="hide-detail detail">
-
+                            <h2 class="project ">Social Media App</h2>
+                            <div class="d-flex back-tech flex-wrap">
+                                <div>
+                                    <p>Ruby on Rails</p>
+                                </div>
+                                <div>
+                                    <p>JavaScript</p>
+                                </div>
+                                <div>
+                                    <p>PostgreSQL</p>
+                                </div>
+                                <div>
+                                    <p>HTML/CSS</p>
+                                </div>
+                            </div>
+                            <p class="project-description"></p>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex TNW p-1">
-                    <h2 class="project">TNW Mimic</h2>
                     <div id="TNW" class="project  detail">
                         <div id="TNW-back" class="hide-detail detail">
-
+                            <h2 class="project ">TNW</h2>
+                            <div class="d-flex back-tech flex-wrap">
+                                <div>
+                                    <p>Ruby on Rails</p>
+                                </div>
+                                <div>
+                                    <p>JavaScript</p>
+                                </div>
+                                <div>
+                                    <p>PostgreSQL</p>
+                                </div>
+                                <div>
+                                    <p>HTML/CSS</p>
+                                </div>
+                            </div>
+                            <p class="project-description"></p>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex tic-tac-toe p-1">
-                    <h2 class="project">Tic-tac-toe</h2>
                     <div id="tic-tac-toe" class="project  detail">
                         <div id="tic-tac-toe-back" class="hide-detail detail">
-
+                            <h2 class="project ">Tic-Tac-Toe</h2>
+                            <div class="d-flex back-tech flex-wrap">
+                                <div>
+                                    <p>Ruby on Rails</p>
+                                </div>
+                                <div>
+                                    <p>JavaScript</p>
+                                </div>
+                                <div>
+                                    <p>PostgreSQL</p>
+                                </div>
+                                <div>
+                                    <p>HTML/CSS</p>
+                                </div>
+                            </div>
+                            <p class="project-description"></p>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex newsweek p-1">
-                    <h2 class="project">Newsweek mimic</h2>
                     <div id="newsweek" class="project  detail">
                         <div id="newsweek-back" class="hide-detail detail">
-
+                            <h2 class="project ">Newsweek Mimic</h2>
+                            <div class="d-flex back-tech flex-wrap">
+                                <div>
+                                    <p>Ruby on Rails</p>
+                                </div>
+                                <div>
+                                    <p>JavaScript</p>
+                                </div>
+                                <div>
+                                    <p>PostgreSQL</p>
+                                </div>
+                                <div>
+                                    <p>HTML/CSS</p>
+                                </div>
+                            </div>
+                            <p class="project-description"></p>
                         </div>
                     </div>
                 </div>
