finished adding content project secction with all styling

--- a/index.html
+++ b/index.html
@@ -67,112 +67,110 @@
             </div>
             <div class="white-bg d-flex container-fluid p-0">
                 <div id="capstone" class="d-flex capstone p-1 detail">
-                    <div id="capstone-back" class="hide-detail">
-                        <h2 class="project ">Indie Developer Log</h2>
-                        <div class="d-flex back-tech flex-wrap">
-                            <div>
-                                <p>Ruby on Rails</p>
+                    <div id="capstone" class="capstone-desk test detail"></div>
+                    <div id="capstone" class="capstone-mobile detail">
+                        <div id="capstone-back" class="hide-detail back-tech-div ">
+                            <h2 class="project ">Indie Developer Log</h2>
+                            <div class="d-flex back-tech flex-wrap">
+                                <div>
+                                    <p>Ruby on Rails</p>
+                                </div>
+                                <div>
+                                    <p>JavaScript</p>
+                                </div>
+                                <div>
+                                    <p>PostgreSQL</p>
+                                </div>
+                                <div>
+                                    <p>HTML/CSS</p>
+                                </div>
                             </div>
-                            <div>
-                                <p>JavaScript</p>
-                            </div>
-                            <div>
-                                <p>PostgreSQL</p>
-                            </div>
-                            <div>
-                                <p>HTML/CSS</p>
+                            <p class="project-description">The final project of the ruby on rails curriculum. The
+                                created app is a time log app for Indie game developers.</p>
+                            <div class="d-flex">
+                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
+                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
                             </div>
                         </div>
-                        <p class="project-description"></p>
                     </div>
-                    <div id="capstone" class="capstone-desk test detail"></div>
-                    <div id="capstone" class="capstone-mobile detail"></div>
                 </div>
                 <div class="d-flex social p-1">
                     <div id="social" class="project  detail">
-                        <div id="social-back" class="hide-detail detail">
+                        <div id="social-back" class="hide-detail back-tech-div">
                             <h2 class="project ">Social Media App</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
                                     <p>Ruby on Rails</p>
                                 </div>
                                 <div>
-                                    <p>JavaScript</p>
-                                </div>
-                                <div>
                                     <p>PostgreSQL</p>
                                 </div>
                                 <div>
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
-                            <p class="project-description"></p>
+                            <p class="project-description">This project is a simple social media app</p>
+                            <div class="d-flex">
+                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
+                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex TNW p-1">
                     <div id="TNW" class="project  detail">
-                        <div id="TNW-back" class="hide-detail detail">
+                        <div id="TNW-back" class="hide-detail back-tech-div">
                             <h2 class="project ">TNW</h2>
                             <div class="d-flex back-tech flex-wrap">
-                                <div>
-                                    <p>Ruby on Rails</p>
-                                </div>
-                                <div>
-                                    <p>JavaScript</p>
-                                </div>
-                                <div>
-                                    <p>PostgreSQL</p>
-                                </div>
                                 <div>
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
-                            <p class="project-description"></p>
+                            <p class="project-description">This project is a responsive mimick of "The Next Web"
+                                webpage. </p>
+                            <div class="d-flex">
+                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
+                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex tic-tac-toe p-1">
                     <div id="tic-tac-toe" class="project  detail">
-                        <div id="tic-tac-toe-back" class="hide-detail detail">
+                        <div id="tic-tac-toe-back" class="hide-detail back-tech-div">
                             <h2 class="project ">Tic-Tac-Toe</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
-                                    <p>Ruby on Rails</p>
-                                </div>
-                                <div>
-                                    <p>JavaScript</p>
-                                </div>
-                                <div>
-                                    <p>PostgreSQL</p>
-                                </div>
-                                <div>
-                                    <p>HTML/CSS</p>
+                                    <p>Ruby</p>
                                 </div>
                             </div>
-                            <p class="project-description"></p>
+                            <p class="project-description">This project is a simple "Tic-toc" game made using ruby that
+                                runs in the console. </p>
+                            <div class="d-flex">
+                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
+                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="d-flex newsweek p-1">
                     <div id="newsweek" class="project  detail">
-                        <div id="newsweek-back" class="hide-detail detail">
+                        <div id="newsweek-back" class="hide-detail back-tech-div">
                             <h2 class="project ">Newsweek Mimic</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
-                                    <p>Ruby on Rails</p>
-                                </div>
-                                <div>
-                                    <p>JavaScript</p>
-                                </div>
-                                <div>
-                                    <p>PostgreSQL</p>
-                                </div>
-                                <div>
                                     <p>HTML/CSS</p>
                                 </div>
+                                <div>
+                                    <p>Bootstrap</p>
+                                </div>
                             </div>
-                            <p class="project-description"></p>
+                            <p class="project-description">This project is a responsive mimick of the "Newsweek" webpage
+                                using Bootstrap</p>
+                            <div class="d-flex">
+                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
+                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
