fixed a bug in the projects section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div id="capstone" class="d-flex capstone p-1 detail">
                     <div id="capstone" class="capstone-desk test detail"></div>
                     <div id="capstone" class="capstone-mobile detail">
-                        <div id="capstone-back" class="hide-detail back-tech-div ">
+                        <div id="capstone-back" class="hide-detail detail back-tech-div ">
                             <h2 class="project ">Indie Developer Log</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="d-flex social p-1">
                     <div id="social" class="project  detail">
-                        <div id="social-back" class="hide-detail back-tech-div">
+                        <div id="social-back" class="hide-detail detail back-tech-div">
                             <h2 class="project ">Social Media App</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="d-flex TNW p-1">
                     <div id="TNW" class="project  detail">
-                        <div id="TNW-back" class="hide-detail back-tech-div">
+                        <div id="TNW-back" class="hide-detail detail back-tech-div">
                             <h2 class="project ">TNW</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="d-flex tic-tac-toe p-1">
                     <div id="tic-tac-toe" class="project  detail">
-                        <div id="tic-tac-toe-back" class="hide-detail back-tech-div">
+                        <div id="tic-tac-toe-back" class="hide-detail detail back-tech-div">
                             <h2 class="project ">Tic-Tac-Toe</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="d-flex newsweek p-1">
                     <div id="newsweek" class="project  detail">
-                        <div id="newsweek-back" class="hide-detail back-tech-div">
+                        <div id="newsweek-back" class="hide-detail detail back-tech-div">
                             <h2 class="project ">Newsweek Mimic</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
