added contact me section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
-                            <p class="project-description">This project is a simple social media app</p>
+                            <p class="project-description">This project is a simple social media app.</p>
                             <div class="d-flex">
                                 <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
                                 <a class="icon d-flex" href="">See source <span class="source"></span></a>
@@ -166,7 +166,7 @@
                                 </div>
                             </div>
                             <p class="project-description">This project is a responsive mimick of the "Newsweek" webpage
-                                using Bootstrap</p>
+                                using Bootstrap.</p>
                             <div class="d-flex">
                                 <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
                                 <a class="icon d-flex" href="">See source <span class="source"></span></a>
@@ -248,7 +248,31 @@
             </div>
         </section>
     </article>
-    <footer>
+    <footer class="dark-bg ">
+        <div class="d-flex left-centered">
+            <h1 class="number">04</h1>
+            <div class="introduction">
+                <p>Interested?</p>
+                <h1>Contact me:</h1>
+            </div>
+        </div>
+        <div class="d-flex align-items-center justify-content-center">
+            <div>
+                <h2> jd.martinez1062@gmail.com</h2>
+                <div class="d-flex social-media">
+                    <!-- stackoverflow -->
+                    <a href=""><img src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
+                    <!-- github -->
+                    <a href=""><img class="github-icon" src="icons/github.svg" alt="Github icon"></a>
+                    <!-- twitter -->
+                    <a href=""><img src="icons/twitter.svg" alt="Twitter icon"></a>
+                    <!-- linkedin -->
+                    <a href=""><img src="icons/linkedin.svg" alt="Linkedin-icon"></a>
+                    <!-- medium -->
+                    <a href=""><img src="icons/medium.svg" alt="Medium icon"></a>
+                </div>
+            </div>
+        </div>
 
     </footer>
     <script src="detail.js"></script>
