--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                         laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
                     <div class="d-flex">
-                        <a class="block orange m-0 link-icon d-flex" href=""> Get my Resume
+                        <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center" href="">
+                            Get my Resume
                             <img class="link-icon" src="icons/link.svg" alt="">
                         </a>
                     </div>
@@ -270,6 +271,12 @@
                     <a href=""><img src="icons/linkedin.svg" alt="Linkedin-icon"></a>
                     <!-- medium -->
                     <a href=""><img src="icons/medium.svg" alt="Medium icon"></a>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center" href=""> Get
+                        my Resume
+                        <img class="link-icon" src="icons/link.svg" alt="">
+                    </a>
                 </div>
             </div>
         </div>
