--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
                     <div class="vector1"></div>
                     <div class="d-flex social-media">
                         <!-- stackoverflow -->
-                        <a href=""><img src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
+                        <a href="https://stackoverflow.com/users/12287354/juan-david-martinez-cubillos"><img
+                                src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
                         <!-- github -->
-                        <a href=""><img class="github-icon" src="icons/github.svg" alt="Github icon"></a>
+                        <a href="https://github.com/jdmartinez1062"><img class="github-icon" src="icons/github.svg"
+                                alt="Github icon"></a>
                         <!-- twitter -->
-                        <a href=""><img src="icons/twitter.svg" alt="Twitter icon"></a>
+                        <a href="https://twitter.com/JuanDMartinez12"><img src="icons/twitter.svg"
+                                alt="Twitter icon"></a>
                         <!-- linkedin -->
-                        <a href=""><img src="icons/linkedin.svg" alt="Linkedin-icon"></a>
+                        <a href="https://www.linkedin.com/in/juanmartinezcubillos/"><img src="icons/linkedin.svg"
+                                alt="Linkedin-icon"></a>
                         <!-- medium -->
-                        <a href=""><img src="icons/medium.svg" alt="Medium icon"></a>
+                        <a href="https://medium.com/@jd.martinez1062"><img src="icons/medium.svg" alt="Medium icon"></a>
                     </div>
                 </div>
             </div>
@@ -88,8 +92,11 @@
                             <p class="project-description">The final project of the ruby on rails curriculum. The
                                 created app is a time log app for Indie game developers.</p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
-                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                                <a class="icon d-flex" href="https://whispering-basin-25539.herokuapp.com">See live
+                                    <span class="plain-git"></span></a>
+                                <a class="icon d-flex"
+                                    href="https://github.com/jdmartinez1062/RoR_CapstoneProject_Transactions">See source
+                                    <span class="source"></span></a>
                             </div>
                         </div>
                     </div>
@@ -111,8 +118,10 @@
                             </div>
                             <p class="project-description">This project is a simple social media app.</p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
-                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                                <a class="icon d-flex" href="https://murmuring-shore-10170.herokuapp.com/">See live
+                                    <span class="plain-git"></span></a>
+                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/ror-social-scaffold">See
+                                    source <span class="source"></span></a>
                             </div>
                         </div>
                     </div>
@@ -129,8 +138,12 @@
                             <p class="project-description">This project is a responsive mimick of "The Next Web"
                                 webpage. </p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
-                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                                <a class="icon d-flex"
+                                    href="https://raw.githack.com/jdmartinez1062/Building-with-Responsive-Design/master/index.html">See
+                                    live <span class="plain-git"></span></a>
+                                <a class="icon d-flex"
+                                    href="https://github.com/jdmartinez1062/Building-with-Responsive-Design">See source
+                                    <span class="source"></span></a>
                             </div>
                         </div>
                     </div>
@@ -144,11 +157,11 @@
                                     <p>Ruby</p>
                                 </div>
                             </div>
-                            <p class="project-description">This project is a simple "Tic-toc" game made using ruby that
-                                runs in the console. </p>
+                            <p class="project-description">This project is a simple "Tic-tac-toe" game made using ruby
+                                that runs in the console. </p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="">See live <span class="plain-git"></span></a>
-                                <a class="icon d-flex" href="">See source <span class="source"></span></a>
+                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/Tic-Tac-Toe">See source
+                                    <span class="source"></span></a>
                             </div>
                         </div>
                     </div>
@@ -191,7 +204,8 @@
                         laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
                     <div class="d-flex">
-                        <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center" href="">
+                        <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center"
+                            href="https://docs.google.com/document/d/1C1nTHSHxKOSgF4nQADNnyVpePu2-QngLpLAnmD_FUdo/edit?usp=sharing">
                             Get my Resume
                             <img class="link-icon" src="icons/link.svg" alt="">
                         </a>
@@ -262,18 +276,23 @@
                 <h2> jd.martinez1062@gmail.com</h2>
                 <div class="d-flex social-media">
                     <!-- stackoverflow -->
-                    <a href=""><img src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
+                    <a href="https://stackoverflow.com/users/12287354/juan-david-martinez-cubillos"><img
+                            src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
                     <!-- github -->
-                    <a href=""><img class="github-icon" src="icons/github.svg" alt="Github icon"></a>
+                    <a href="https://github.com/jdmartinez1062"><img class="github-icon" src="icons/github.svg"
+                            alt="Github icon"></a>
                     <!-- twitter -->
-                    <a href=""><img src="icons/twitter.svg" alt="Twitter icon"></a>
+                    <a href="https://twitter.com/JuanDMartinez12"><img src="icons/twitter.svg" alt="Twitter icon"></a>
                     <!-- linkedin -->
-                    <a href=""><img src="icons/linkedin.svg" alt="Linkedin-icon"></a>
+                    <a href="https://www.linkedin.com/in/juanmartinezcubillos/"><img src="icons/linkedin.svg"
+                            alt="Linkedin-icon"></a>
                     <!-- medium -->
-                    <a href=""><img src="icons/medium.svg" alt="Medium icon"></a>
+                    <a href="https://medium.com/@jd.martinez1062"><img src="icons/medium.svg" alt="Medium icon"></a>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center" href=""> Get
+                    <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center"
+                        href="https://docs.google.com/document/d/1C1nTHSHxKOSgF4nQADNnyVpePu2-QngLpLAnmD_FUdo/edit?usp=sharing">
+                        Get
                         my Resume
                         <img class="link-icon" src="icons/link.svg" alt="">
                     </a>
