--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <div id="capstone" class="d-flex capstone p-1 detail">
                     <div id="capstone-desk" class="capstone-desk test detail"></div>
                     <div id="capstone-mobile" class="capstone-mobile detail">
-                        <div id="capstone-back" class="hide-detail detail back-tech-div ">
+                        <div id="capstone-back" class="hide-detail detail back-tech-div justify-content-center ">
                             <h2 class="project ">Indie Developer Log</h2>
-                            <div class="d-flex back-tech flex-wrap">
+                            <div class="d-flex back-tech flex-wrap justify-content-center">
                                 <div>
                                     <p>Ruby on Rails</p>
                                 </div>
@@ -105,7 +105,7 @@
                     <div id="social" class="project  detail">
                         <div id="social-back" class="hide-detail detail back-tech-div">
                             <h2 class="project ">Social Media App</h2>
-                            <div class="d-flex back-tech flex-wrap">
+                            <div class="d-flex back-tech flex-wrap justify-content-center">
                                 <div>
                                     <p>Ruby on Rails</p>
                                 </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="d-flex TNW p-1">
                     <div id="TNW" class="project  detail">
-                        <div id="TNW-back" class="hide-detail detail back-tech-div">
+                        <div id="TNW-back" class="hide-detail detail back-tech-div justify-content-center">
                             <h2 class="project ">TNW</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="d-flex tic-tac-toe p-1">
                     <div id="tic-tac-toe" class="project  detail">
-                        <div id="tic-tac-toe-back" class="hide-detail detail back-tech-div">
+                        <div id="tic-tac-toe-back" class="hide-detail detail back-tech-div justify-content-center">
                             <h2 class="project ">Tic-Tac-Toe</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="d-flex newsweek p-1">
                     <div id="newsweek" class="project  detail">
-                        <div id="newsweek-back" class="hide-detail detail back-tech-div">
+                        <div id="newsweek-back" class="hide-detail detail back-tech-div justify-content-center ">
                             <h2 class="project ">Newsweek Mimic</h2>
                             <div class="d-flex back-tech flex-wrap">
                                 <div>
