--- a/index.html
+++ b/index.html
@@ -32,27 +32,28 @@
             <div class="introduction container-fluid">
                 <p>Hello, I'm</p>
                 <h1>Juan Martínez</h1>
-                <p>Hello! I am a software developer! I can help you build a product, feature or website. Look through
-                    some of my work and experience! If you like what you see and have a project you need coded, don’t
-                    hesitate and contact me.</p>
+                <p>Hello! I am a software developer! I can help you build a product, feature, or website. Look through
+                    some of my work and experience! If you like what you see and have a project you need to be coded,
+                    don’t hesitate and contact me.</p>
                 <div class="d-flex  align-items-center">
                     <p class="block orange m-0">See my work</p>
                     <div class="vector1"></div>
                     <div class="d-flex social-media">
                         <!-- stackoverflow -->
-                        <a href="https://stackoverflow.com/users/12287354/juan-david-martinez-cubillos"><img
-                                src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
+                        <a href="https://stackoverflow.com/users/12287354/juan-david-martinez-cubillos"
+                            target="_blank"><img src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
                         <!-- github -->
-                        <a href="https://github.com/jdmartinez1062"><img class="github-icon" src="icons/github.svg"
-                                alt="Github icon"></a>
+                        <a href="https://github.com/jdmartinez1062" target="_blank"><img class="github-icon"
+                                src="icons/github.svg" alt="Github icon"></a>
                         <!-- twitter -->
-                        <a href="https://twitter.com/JuanDMartinez12"><img src="icons/twitter.svg"
+                        <a href="https://twitter.com/JuanDMartinez12" target="_blank"><img src="icons/twitter.svg"
                                 alt="Twitter icon"></a>
                         <!-- linkedin -->
-                        <a href="https://www.linkedin.com/in/juanmartinezcubillos/"><img src="icons/linkedin.svg"
-                                alt="Linkedin-icon"></a>
+                        <a href="https://www.linkedin.com/in/juanmartinezcubillos/" target="_blank"><img
+                                src="icons/linkedin.svg" alt="Linkedin-icon"></a>
                         <!-- medium -->
-                        <a href="https://medium.com/@jd.martinez1062"><img src="icons/medium.svg" alt="Medium icon"></a>
+                        <a href="https://medium.com/@jd.martinez1062" target="_blank"><img src="icons/medium.svg"
+                                alt="Medium icon"></a>
                     </div>
                 </div>
             </div>
@@ -92,10 +93,12 @@
                             <p class="project-description">The final project of the ruby on rails curriculum. The
                                 created app is a time log app for Indie game developers.</p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="https://whispering-basin-25539.herokuapp.com">See live
+                                <a class="icon d-flex" href="https://whispering-basin-25539.herokuapp.com"
+                                    target="_blank">See live
                                     <span class="plain-git"></span></a>
                                 <a class="icon d-flex"
-                                    href="https://github.com/jdmartinez1062/RoR_CapstoneProject_Transactions">See source
+                                    href="https://github.com/jdmartinez1062/RoR_CapstoneProject_Transactions"
+                                    target="_blank">See source
                                     <span class="source"></span></a>
                             </div>
                         </div>
@@ -118,9 +121,11 @@
                             </div>
                             <p class="project-description">This project is a simple social media app.</p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="https://murmuring-shore-10170.herokuapp.com/">See live
+                                <a class="icon d-flex" href="https://murmuring-shore-10170.herokuapp.com/"
+                                    target="_blank">See live
                                     <span class="plain-git"></span></a>
-                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/ror-social-scaffold">See
+                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/ror-social-scaffold"
+                                    target="_blank">See
                                     source <span class="source"></span></a>
                             </div>
                         </div>
@@ -135,14 +140,16 @@
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
-                            <p class="project-description">This project is a responsive mimick of "The Next Web"
+                            <p class="project-description">This project is a responsive mimick of the "The Next Web"
                                 webpage. </p>
                             <div class="d-flex">
                                 <a class="icon d-flex"
-                                    href="https://raw.githack.com/jdmartinez1062/Building-with-Responsive-Design/master/index.html">See
+                                    href="https://raw.githack.com/jdmartinez1062/Building-with-Responsive-Design/master/index.html"
+                                    target="_blank">See
                                     live <span class="plain-git"></span></a>
                                 <a class="icon d-flex"
-                                    href="https://github.com/jdmartinez1062/Building-with-Responsive-Design">See source
+                                    href="https://github.com/jdmartinez1062/Building-with-Responsive-Design"
+                                    target="_blank">See source
                                     <span class="source"></span></a>
                             </div>
                         </div>
@@ -160,7 +167,8 @@
                             <p class="project-description">This project is a simple "Tic-tac-toe" game made using ruby
                                 that runs in the console. </p>
                             <div class="d-flex">
-                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/Tic-Tac-Toe">See source
+                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/Tic-Tac-Toe"
+                                    target="_blank">See source
                                     <span class="source"></span></a>
                             </div>
                         </div>
@@ -182,9 +190,11 @@
                                 using Bootstrap.</p>
                             <div class="d-flex">
                                 <a class="icon d-flex"
-                                    href="https://rawcdn.githack.com/jdmartinez1062/Using-Bootstrap/86278d5883f4d9464dc45b5e785f81a08bcaabe1/index.HTML">See
+                                    href="https://rawcdn.githack.com/jdmartinez1062/Using-Bootstrap/86278d5883f4d9464dc45b5e785f81a08bcaabe1/index.HTML"
+                                    target="_blank">See
                                     live <span class="plain-git"></span></a>
-                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/Using-Bootstrap">See
+                                <a class="icon d-flex" href="https://github.com/jdmartinez1062/Using-Bootstrap"
+                                    target="_blank">See
                                     source <span class="source"></span></a>
                             </div>
                         </div>
@@ -202,13 +212,19 @@
                     <p>Learn more</p>
                     <h1>About me</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
+                        I am a chemical and mechanical engineer. While studying I discovered my love for mathematics and
+                        programming. I started programming chemical reactions and moved to distillation processes and
+                        rocket dynamics. Soon I was not only interested in simulations but in creating new apps that
+                        people could use. Along this, I took extracurricular mathematic courses that improved my ability
+                        to understand data structures and solve complex programming problems.
+                        <br> <br>
+                        During the last 12 months, I have been working 40+ hours per week doing remote pair programming
+                        with different coding partners from all over the globe. If you are interested...
                     </p>
                     <div class="d-flex">
                         <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center"
-                            href="https://docs.google.com/document/d/1C1nTHSHxKOSgF4nQADNnyVpePu2-QngLpLAnmD_FUdo/edit?usp=sharing">
+                            href="https://docs.google.com/document/d/1C1nTHSHxKOSgF4nQADNnyVpePu2-QngLpLAnmD_FUdo/edit?usp=sharing"
+                            target="_blank">
                             Get my Resume
                             <img class="link-icon" src="icons/link.svg" alt="">
                         </a>
@@ -279,22 +295,25 @@
                 <h2> jd.martinez1062@gmail.com</h2>
                 <div class="d-flex social-media">
                     <!-- stackoverflow -->
-                    <a href="https://stackoverflow.com/users/12287354/juan-david-martinez-cubillos"><img
+                    <a href="https://stackoverflow.com/users/12287354/juan-david-martinez-cubillos" target="_blank"><img
                             src="icons/stackoverflow.svg" alt="Stackoverflow icon"></a>
                     <!-- github -->
-                    <a href="https://github.com/jdmartinez1062"><img class="github-icon" src="icons/github.svg"
-                            alt="Github icon"></a>
+                    <a href="https://github.com/jdmartinez1062" target="_blank"><img class="github-icon"
+                            src="icons/github.svg" alt="Github icon"></a>
                     <!-- twitter -->
-                    <a href="https://twitter.com/JuanDMartinez12"><img src="icons/twitter.svg" alt="Twitter icon"></a>
+                    <a href="https://twitter.com/JuanDMartinez12" target="_blank"><img src="icons/twitter.svg"
+                            alt="Twitter icon"></a>
                     <!-- linkedin -->
-                    <a href="https://www.linkedin.com/in/juanmartinezcubillos/"><img src="icons/linkedin.svg"
-                            alt="Linkedin-icon"></a>
+                    <a href="https://www.linkedin.com/in/juanmartinezcubillos/" target="_blank"><img
+                            src="icons/linkedin.svg" alt="Linkedin-icon"></a>
                     <!-- medium -->
-                    <a href="https://medium.com/@jd.martinez1062"><img src="icons/medium.svg" alt="Medium icon"></a>
+                    <a href="https://medium.com/@jd.martinez1062" target="_blank"><img src="icons/medium.svg"
+                            alt="Medium icon"></a>
                 </div>
                 <div class="d-flex justify-content-center">
                     <a class="block orange m-0 link-icon d-flex justify-content-center align-items-center"
-                        href="https://docs.google.com/document/d/1C1nTHSHxKOSgF4nQADNnyVpePu2-QngLpLAnmD_FUdo/edit?usp=sharing">
+                        href="https://docs.google.com/document/d/1C1nTHSHxKOSgF4nQADNnyVpePu2-QngLpLAnmD_FUdo/edit?usp=sharing"
+                        target="_blank">
                         Get
                         my Resume
                         <img class="link-icon" src="icons/link.svg" alt="">
