fixed some overflowing bugs

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
                 </div>
             </div>
-            <div id="skills" class="squares d-flex flex-wrap ">
+            <div id="skills" class="squares d-flex flex-wrap justify-content-center">
                 <div class="square">
                     <div class="vector"></div>
                     <div class="about-info">
